manifests/03-apisix/ingressss-notls-10000/6320-10.yaml
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06320-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06320-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06321-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06321-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06322-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06322-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06323-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06323-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06324-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06324-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06325-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06325-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06326-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06326-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06327-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06327-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06328-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06328-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 06329-ingressss-notls-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-notls-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: apisix
  rules:
    - host: "06329-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
